--- a/Data.Rmd
+++ b/Data.Rmd
@@ -16,6 +16,7 @@ When you click the **Knit** button a document will be generated that includes bo
 ```{r cars}
 plot(USAccDeaths)
 plot(UKDriverDeaths)
+plot(USArrests)
 ```
 
 ## Including Plots
